compiler-core/src/parse/snapshots/gleam_core__parse__tests__special_error_for_pythonic_import.snap
---
source: compiler-core/src/parse/tests.rs
expression: import gleam.io
---
----- SOURCE CODE
import gleam.io

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:13
  │
1 │ import gleam.io
  │             ^ I was expecting either `/` or `.{` here.

Perhaps you meant one of:

    import gleam/io
    import gleam.{item}
